--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,3 +1,11 @@
 body {
   margin: 0;
 }
+
+main {
+  flex: 1;
+  padding: 0.5em;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
